lab1/Test/L1-A-12-76.output
Error Type B at Line 5
Error Type A at Line 15
Error Type A at Line 25
Error Type B at Line 35
Error Type A at Line 45
