lab1/Test/L1-A-12-76.cmm
float ;
int ;
int VfHBsMUYED8kZmvqIKIk , 

;
int ErQVLvCAP1jYG ( int V5 ) {
  int I7nHh ;
  int kagS371kSIhnkzFaaEq ;
  struct {
    int sum6n9sDY0CK3QyqK ;
    int cSacIsvAazYX ;
    struct {
      struct pRk {
      }NVErzltjz99w0h9d ;
    }Z ^;
  }G ;
  if ( uun4YzCOYj )   while ( IKD1RIqzns6MinIU )   if 
    ( fE5SW4_ )   w_VPLKoUrCGb ;
else {
    struct {
      struct SLxWiORjTVXup YrXrqFA ;
      int vd9QPD9H ;
      int T9zOjzbalnuidZBfiVHo ;
    }czWnu2fJmYAHJ [ 2146660202 ] , xPiq9VALIF5 = 
      avd7h2pwU2 ~;
    if ( yb6AgiHKsuxdCYCnmhH )     return ewR8WINfxXIEuJmkR4i 
      ;

  }

else   if ( lxDO68rxQp5 )   CFNErJZ1ND8 = D || juS9FczcswaCMBlvhUYU 
    && BFllIlRGog == XHpI * efnBlW ( p8 , ojXGKGeZgz + 
    Q [ m7atl6aGQeTH = VW23 = sNvd <= nr73sDbQjv - ( C58bx 
    = N != ( iK1sbneicL2 || xlIsH_Ud >= x45X0AB_R3X0tvTjrax 
    - RTaWsUWCk3LR_8BAe [ = KaB9SWOpLY1dVh0Opuy = OOlFb1_wbeZZgLTVh 
    || luFTK > FWDQLOxr2JfbDDCxR ] / ! KuqGkNP < PMjZaoVidWFHNh 
    * ! fOP ) - 1040533676.1954729627 / 1732208490 ) * 
    ZtXuTUB8wuRR . DB8hsP3TxhxgJQraFcBG ] / ! - - - U6EMuKd6JrSQHog 
    ( ) ) ;


}
int Dnty9j_3jZMQr9i ( ) {
}
int Hr ( int x , int $rAHTw57RAQY46sM ) {
}
